# mcp-demo

./: .cursorrules  LICENSE.txt  README.md  pyproject.toml
mcp-server/: .cursorrules  .gitignore  README.md  pyproject.toml
mcp-server/src/mcp_server/: __about__.py  __main__.py  server.py
mcp-server/tests/: test_server.py
tests/: __init__.py  test_server.py
