[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
dynamic = ["version"]
description = 'MCP server for managing datasets, flows, dashboards, and charts'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "server"]
authors = [
  { name = "Harsh Parekh", email = "harsh@ikigailabs.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastmcp>=2.13.0",
    "pydantic>=2.0.0",
    "ikigai>=0.2.9",
]

[project.scripts]
mcp-server = "mcp_server.server:cli"

[project.urls]
Documentation = "https://github.com/Harsh Parekh/mcp-server#readme"
Issues = "https://github.com/Harsh Parekh/mcp-server/issues"
Source = "https://github.com/Harsh Parekh/mcp-server"

[tool.hatch.version]
path = "src/mcp_server/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.14.0",
]

[tool.hatch.envs.default.scripts]
dev = "python -m mcp_server.server"
test = "pytest {args:tests}"
fmt = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check --fix ."

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mcp_server tests}"

[[tool.mypy.overrides]]
module = ["ikigai.*"]
follow_untyped_imports = true


[tool.coverage.run]
source_pkgs = ["mcp_server", "tests"]
branch = true
parallel = true
omit = [
  "src/mcp_server/__about__.py",
]

[tool.coverage.paths]
mcp_server = ["src/mcp_server", "*/mcp-server/src/mcp_server"]
tests = ["tests", "*/mcp-server/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
